# rtow

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile
src/: base_material.cpp  base_material.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  dielectric_material.cpp  dielectric_material.hpp  hittable_list.cpp  hittable_list.hpp  ihittable.cpp  ihittable.hpp  intersection.cpp  intersection.hpp  interval.hpp  lambertian_material.cpp  lambertian_material.hpp  main.cpp  metal_material.cpp  metal_material.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  utils.cpp  utils.hpp  vec3.cpp  vec3.hpp
src/material/: base_material.hpp  dielectric_material.cpp  dielectric_material.hpp  lambertian_material.cpp  lambertian_material.hpp  metal_material.cpp  metal_material.hpp
